--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "get-pixels": "^3.3.0",
     "mocha-multi": "^1.0.1",
+    "npm": "^6.4.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
