--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     ]
   },
   "dependencies": {
+    "eslint-plugin-html": "^4.0.6",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
     "get-pixels": "^3.3.0",
     "mocha-multi": "^1.0.1",
     "react": "^16.4.1",
@@ -33,6 +35,9 @@
     "chai": "^4.1.2",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "eslint": "^5.8.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
     "mocha": "^5.2.0",
     "sinon": "^6.1.0"
   }
