--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "get-pixels": "^3.3.0",
     "mocha-multi": "^1.0.1",
     "react": "^16.4.1",
-    "react-dom": "^16.4.2",
+    "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
     "webpack": "^3.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "mocha --timeout 5000 -w ./test/*.js",
+    "test": "mocha -w ./test/*.js",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
